fix: adjust board line visibility; make 4 the default layer number

--- a/style.css
+++ b/style.css
@@ -67,12 +67,12 @@ body {
 }
 
 .player-1 {
-    background-color: rgba(0, 0, 255, 0.6);
+    background-color: rgba(0, 0, 255, 0.7);
     color: #ffffff;
 }
 
 .player-2 {
-    background-color: rgba(255, 0, 0, 0.6);
+    background-color: rgba(255, 0, 0, 0.7);
     color: #ffffff;
 }
 
@@ -111,6 +111,8 @@ button:hover {
 
 .board-svg {
     display: block;
+    background-color: rgb(128, 128, 128, 0.5);
+    border-radius: 20px;
 }
 
 .node {
@@ -121,7 +123,7 @@ button:hover {
 
 .line {
     stroke: #ddd;
-    stroke-width: 5;
+    stroke-width: 7;
     cursor: pointer;
     transition: stroke 0.3s;
 }
@@ -138,9 +140,9 @@ button:hover {
     stroke: #ff0000;
 }
 
-.triangle {
+/* .triangle {
     opacity: 0.5;
-}
+} */
 
 .triangle.player-1 {
     fill: #0000ff;
